--- a/docs/report.tex
+++ b/docs/report.tex
@@ -93,7 +93,7 @@
 
 \begin{abstract}
 
-  In this work, we present numerical methods for pricing American options with continuous dividend-yield assets. We focus on two important formulations of the pricing problem: the free boundary problem and the variational inequalities problem. In the free boundary formulation, we solve the Black-Scholes PDE with a moving boundary condition. By applying the front fixing method, we transform the free boundary problem to a domain where moving boundary is fixed. Then, we derived explicit and implicit schemes for the transformed PDE. On the other hand, for the variational inequalities formulation, we solve the heat diffusion variational inequality derived from transforming the Black-Scholes PDE into the heat diffusion equation. By applying the theta method, the variational inequalities problem is reformulated as a linear complementary problem. Then, we derived PSOR method to solve the LCP problem iteratively. Finally, by conducting a series of numerical experiments, we conclude that the front fixing explicit schemes derived are efficient and accurate, the front fixing implicit scheme produces significant approximation errors, and the PSOR method yields to accurate approximations though is relatively inefficient compared to the front fixing explicit schemes.
+  In this work, we present numerical methods for pricing American options with continuous dividend-yield assets. We focus on two important formulations of the pricing problem: the free boundary problem and the Black-Scholes variational inequality. In the free boundary formulation, we solve the Black-Scholes PDE with a moving boundary condition. By applying the front fixing method, we transform the free boundary problem to a domain where moving boundary is fixed. Then, we derived explicit and implicit schemes for the transformed PDE. On the other hand, for the variational inequality formulation, we solve the heat diffusion variational inequality derived from transforming the Black-Scholes PDE into the heat diffusion equation. By applying the theta method, the variational inequality is reformulated as a linear complementary problem. Then, we derived PSOR method to solve the LCP problem iteratively. Finally, by conducting a series of numerical experiments, we conclude that the front fixing explicit schemes derived are efficient and accurate, the front fixing implicit scheme produces significant approximation errors, and the PSOR method yields to accurate approximations though is relatively inefficient compared to the front fixing explicit schemes.
   
 \end{abstract}
 
