--- a/docs/progress.bib
+++ b/docs/progress.bib
@@ -1,9 +1,9 @@
-@book{wilmott_howison_dewynne_1995,
+@book{dewynne_howison_wilmott_howison_1995,
   place     = {Cambridge},
   title     = {The Mathematics of Financial Derivatives: A Student Introduction},
   doi       = {10.1017/CBO9780511812545},
   publisher = {Cambridge University Press},
-  author    = {Wilmott, Paul and Howison, Sam and Dewynne, Jeff},
+  author    = {Dewynne, Jeff and Howison, Sam and Wilmott, Paul},
   year      = {1995}
 }
 
@@ -11,7 +11,7 @@
   title     = {Tools for Computational Finance},
   doi       = {10.1007/978-3-540-92929-1},
   publisher = {Springer Berlin, Heidelberg},
-  author    = {Rüdiger U. Seydel},
+  author    = {Seydel, Rüdiger U.},
   year      = {2009}
 }
 
@@ -31,7 +31,7 @@
   volume = {2014},
   url    = {https://www.hindawi.com/journals/aaa/2014/146745/},
   doi    = {https://doi.org/10.1155/2014/146745},
-  author = {Egorova, Vera N and Jódar, Lucas},
+  author = {Egorova, Vera N. and Jódar, Lucas},
   year   = {2014},
   month  = {Jan},
   pages  = {1-9}
@@ -50,7 +50,7 @@
 
 @article{landau_1950_heat_ci,
   title   = {Heat conduction in a melting solid},
-  author  = {H. G. Landau},
+  author  = {Landau, Hyman G.},
   journal = {Quarterly of Applied Mathematics},
   year    = {1950},
   volume  = {8},
@@ -73,7 +73,7 @@
   issn      = {00058556},
   url       = {http://www.jstor.org/stable/3003143},
   abstract  = {The long history of the theory of option pricing began in 1900 when the French mathematician Louis Bachelier deduced an option pricing formula based on the assumption that stock prices follow a Brownian motion with zero drift. Since that time, numerous researchers have contributed to the theory. The present paper begins by deducing a set of restrictions on option pricing formulas from the assumption that investors prefer more to less. These restrictions are necessary conditions for a formula to be consistent with a rational pricing theory. Attention is given to the problems created when dividends are paid on the underlying common stock and when the terms of the option contract can be changed explicitly by a change in exercise price or implicitly by a shift in the investment or capital structure policy of the firm. Since the deduced restrictions are not sufficient to uniquely determine an option pricing formula, additional assumptions are introduced to examine and extend the seminal Black-Scholes theory of option pricing. Explicit formulas for pricing both call and put options as well as for warrants and the new "down-and-out" option are derived. The effects of dividends and call provisions on the warrant price are examined. The possibilities for further extension of the theory to the pricing of corporate liabilities are discussed.},
-  author    = {Robert C. Merton},
+  author    = {Merton, Robert C.},
   journal   = {The Bell Journal of Economics and Management Science},
   number    = {1},
   pages     = {141--183},
@@ -88,7 +88,7 @@
   issn      = {00223808, 1537534X},
   url       = {http://www.jstor.org/stable/1831029},
   abstract  = {If options are correctly priced in the market, it should not be possible to make sure profits by creating portfolios of long and short positions in options and their underlying stocks. Using this principle, a theoretical valuation formula for options is derived. Since almost all corporate liabilities can be viewed as combinations of options, the formula and the analysis that led to it are also applicable to corporate liabilities such as common stock, corporate bonds, and warrants. In particular, the formula can be used to derive the discount that should be applied to a corporate bond because of the possibility of default.},
-  author    = {Fischer Black and Myron Scholes},
+  author    = {Black, Fischer and Scholes, Myron},
   journal   = {Journal of Political Economy},
   number    = {3},
   pages     = {637--654},
@@ -109,14 +109,14 @@
   issn     = {0304-405X},
   doi      = {https://doi.org/10.1016/0304-405X(79)90015-1},
   url      = {https://www.sciencedirect.com/science/article/pii/0304405X79900151},
-  author   = {John C. Cox and Stephen A. Ross and Mark Rubinstein},
+  author   = {Cox, John C. and Ross, Stephen A. and Rubinstein, Mark},
   abstract = {This paper presents a simple discrete-time model for valuing options. The fundamental economic principles of option pricing by arbitrage methods are particularly clear in this setting. Its development requires only elementary mathematics, yet it contains as a special limiting case the celebrated Black-Scholes model, which has previously been derived only by much more difficult methods. The basic model readily lends itself to generalization in many ways. Moreover, by its very construction, it gives rise to a simple and efficient numerical procedure for valuing options for which premature exercise may be optimal.}
 }
 
 @article{brennan_1997,
   issn      = {00221082, 15406261},
   url       = {http://www.jstor.org/stable/2326779},
-  author    = {Michael J. Brennan and Eduardo S. Schwartz},
+  author    = {Brennan, Michael J. and Schwartz, Eduardo S.},
   journal   = {The Journal of Finance},
   number    = {2},
   pages     = {449--462},
@@ -139,7 +139,7 @@
   issn     = {0304-405X},
   doi      = {https://doi.org/10.1016/0304-405X(77)90037-X},
   url      = {https://www.sciencedirect.com/science/article/pii/0304405X7790037X},
-  author   = {Eduardo S. Schwartz},
+  author   = {Schwartz, Eduardo S.},
   abstract = {The option pricing model developed by Black and Scholes and extended by Merton gives rise to partial differential equations governing the value of an option. When the underlying stock pays no dividends – and in some very restrictive cases when it does – a closed form solution to the differential equation subject to the appropriate boundary conditions, has been obtained. But, in some relevant cases such as the one in which the stock pays discrete dividends, no closed form solution has been found. This paper shows how to solve these equations by numerical methods. In addition, the optimal strategy for exercising American options is derived. A numerical illustration of the procedure is also presented.}
 }
 
@@ -152,7 +152,7 @@
 }
 
 @article{huang_2000,
-  author   = {Huang,Jacqueline},
+  author   = {Huang, Jacqueline},
   year     = {2000},
   title    = {American options and complementarity problems},
   journal  = {ProQuest Dissertations and Theses},
@@ -187,7 +187,7 @@
   pages     = {381-398}
 }
 
-@article{dantzig_1968,
+@article{cottle_1968,
 title = {Complementary pivot theory of mathematical programming},
 journal = {Linear Algebra and its Applications},
 volume = {1},
@@ -197,7 +197,7 @@ year = {1968},
 issn = {0024-3795},
 doi = {https://doi.org/10.1016/0024-3795(68)90052-9},
 url = {https://www.sciencedirect.com/science/article/pii/0024379568900529},
-author = {Richard W. Cottle and George B. Dantzig}
+author = {Cottle, Richard W. and Dantzigl, George B.}
 }
 
 @book{epperson_2013,
@@ -209,3 +209,29 @@ publisher = {Wiley Publishing},
 edition = {2nd},
 abstract = {Praise for the First Edition. . . outstandingly appealing with regard to its style, contents, considerations of requirements of practice, choice of examples, and exercises.Zentralblatt MATH. . . carefully structured with many detailed worked examples.The Mathematical GazetteThe Second Edition of the highly regarded An Introduction to Numerical Methods and Analysis provides a fully revised guide to numerical approximation. The book continues to be accessible and expertly guides readers through the many available techniques of numerical methods and analysis.An Introduction to Numerical Methods and Analysis, Second Edition reflects the latest trends in the field, includes new material and revised exercises, and offers a unique emphasis on applications. The author clearly explains how to both construct and evaluate approximations for accuracy and performance, which are key skills in a variety of fields. A wide range of higher-level methods and solutions, including new topics such as the roots of polynomials, spectral collocation, finite element ideas, and Clenshaw-Curtis quadrature, are presented from an introductory perspective, and the Second Edition also features:Chapters and sections that begin with basic, elementary material followed by gradual coverage of more advanced materialExercises ranging from simple hand computations to challenging derivations and minor proofs to programming exercisesWidespread exposure and utilization of MATLABAn appendix that contains proofs of various theorems and other materialThe book is an ideal textbook for students in advanced undergraduate mathematics and engineering courses who are interested in gaining an understanding of numerical methods and numerical analysis.}
 }
+
+@article{lacruz_2006,
+ ISSN = {00255718, 10886842},
+ URL = {http://www.jstor.org/stable/4100282},
+ abstract = {A fully derivative-free spectral residual method for solving large-scale nonlinear systems of equations is presented. It uses in a systematic way the residual vector as a search direction, a spectral steplength that produces a nonmonotone process and a globalization strategy that allows for this nonmonotone behavior. The global convergence analysis of the combined scheme is presented. An extensive set of numerical experiments that indicate that the new combination is competitive and frequently better than well-known Newton-Krylov methods for large-scale problems is also presented.},
+ author = {La Cruz, William and Martínez, José M. and Raydan, Marcos},
+ journal = {Mathematics of Computation},
+ number = {255},
+ pages = {1429--1448},
+ publisher = {American Mathematical Society},
+ title = {Spectral Residual Method without Gradient Information for Solving Large-Scale Nonlinear Systems of Equations},
+ urldate = {2023-08-30},
+ volume = {75},
+ year = {2006}
+}
+
+@book{nassif2016introduction,
+  title={Introduction to Numerical Analysis and Scientific Computing},
+  author={Nassif, N. and Fayyad, D.K.},
+  isbn={9781466589490},
+  lccn={2013012520},
+  url={https://books.google.co.uk/books?id=93DSBQAAQBAJ},
+  year={2016},
+  publisher={CRC Press}
+}
+
