--- a/docs/report.tex
+++ b/docs/report.tex
@@ -118,10 +118,10 @@
 \appendix
 
 \include{chapters/appendix}
-\section{Code for convergence analysis} \label{sec:convergenceanalysis}
-\vspace{2cm}
-\includegraphics[scale=0.9, clip, trim={2.5cm, 2.5cm 0mm 7cm}]{chapters/appendix/convergence_analysis}
-\includepdf[pages=2-, scale=0.8, pagecommand={\thispagestyle{plain}}, clip,trim=2.5cm 25mm 0mm 0mm]{chapters/appendix/convergence_analysis}
+% \section{Code for convergence analysis} \label{sec:convergenceanalysis}
+% \vspace{2cm}
+% \includegraphics[scale=0.9, clip, trim={2.5cm, 2.5cm 0mm 7cm}]{chapters/appendix/convergence_analysis}
+% \includepdf[pages=2-, scale=0.8, pagecommand={\thispagestyle{plain}}, clip,trim=2.5cm 25mm 0mm 0mm]{chapters/appendix/convergence_analysis}
 \newpage
 \printbibliography
 
