--- a/docs/report.tex
+++ b/docs/report.tex
@@ -93,7 +93,7 @@
 
 \begin{abstract}
 
-  In this work, we present numerical methods for pricing American options with continuous dividend-yield assets. We focus on two important formulations of the pricing problem: the free boundary problem and the Black-Scholes variational inequality. In the free boundary formulation, we solve the Black-Scholes PDE with a moving boundary condition. By applying the front fixing method, we transform the free boundary problem to a domain where moving boundary is fixed. Then, we derived explicit and implicit schemes for the transformed PDE. On the other hand, for the variational inequality formulation, we solve the heat diffusion variational inequality derived from transforming the Black-Scholes PDE into the heat diffusion equation. By applying the theta method, the variational inequality is reformulated as a linear complementary problem which is then, solved iteratively using the PSOR method. Finally, by conducting a series of numerical experiments, we conclude that the explicit front fixing schemes derived are efficient and accurate, the implicit front fixing scheme produces significant approximation errors, and the PSOR method yields to accurate approximations though is relatively inefficient compared to the front fixing explicit schemes. To summarize, we implemented several numerical schemes for pricing American options with underlying assets that pay out dividends and discusses whether these methods were capable to solve the pricing problem with a high degree of accuracy.
+  In this work, we present numerical methods for pricing American options with continuous dividend-yield assets. We focus on two important formulations of the pricing problem: the free boundary problem and the Black-Scholes variational inequality. In the free boundary formulation, we solve the Black-Scholes PDE with a moving boundary condition. By applying the front fixing method, we transform the free boundary problem to a domain where moving boundary is fixed. Then, we derived explicit and implicit schemes for the transformed PDE. On the other hand, for the variational inequality formulation, we solve the heat diffusion variational inequality derived from transforming the Black-Scholes PDE into the heat diffusion equation. By applying the theta method, the variational inequality is reformulated as a linear complementary problem which is then, solved iteratively using the PSOR method. Finally, by conducting a series of numerical experiments, we conclude that the explicit front fixing schemes derived are efficient and accurate, the implicit front fixing scheme produces significant approximation errors, and the PSOR method yields to accurate approximations though is relatively inefficient compared to the front fixing explicit schemes. To summarize, we have implemented several numerical schemes for pricing American options with underlying assets that pay out dividends and discusses whether these methods were capable to solve the pricing problem efficiently and with a high degree of accuracy.
   
 \end{abstract}
 
