--- a/docs/report.tex
+++ b/docs/report.tex
@@ -53,7 +53,7 @@
 \MSc
 
 % adjust the following
-\title{Numerical Methods for Pricing American Options with Continuous Dividend Yields Assets.}
+\title{Numerical Methods for Pricing American Options with Continuous Dividend Yields Assets}
 \author{Alvin Jonel De la Cruz Guerrero}
 \academicyear{2022/23}
 \supervisor{Dr. Anna Kalogirou}
